--- a/src/main/resources/templates/manage_courses.html
+++ b/src/main/resources/templates/manage_courses.html
@@ -65,9 +65,9 @@
                 }
                 for (var i=0; i<list.length; i++) {
                     if (list.item(i).firstElementChild.innerHTML.substr(0, val.length).toUpperCase() != val.toUpperCase()) {
-                        list.item(i).firstElementChild.setAttribute("hidden", "true");
+                        list.item(i).setAttribute("hidden", "true");
                     } else {
-                        list.item(i).firstElementChild.removeAttribute("hidden");
+                        list.item(i).removeAttribute("hidden");
                     }
                 }
             })
