--- a/src/main/resources/templates/group_view.html
+++ b/src/main/resources/templates/group_view.html
@@ -7,6 +7,10 @@
 <body>
 <h2 th:text="${group.name}"></h2>
 <div>
+    <button onclick="rename(this)">Rename Group</button>
+    <button onclick="delete_confirm()">Delete Group</button>
+</div>
+<div>
     <div th:each="student: ${group.students}">
         <a th:href="@{../../members/student/{id}(id=${student.student_id})}" th:text="${student.fullname}"></a>
         <a th:href="@{./remove_student/{id}(id=${student.student_id})}">X</a>
@@ -20,6 +24,36 @@
     <button id="save_btn" type="f">Add</button>
 </form>
 <script th:inline="javascript">
+
+    function rename(e) {
+        e.hidden = true;
+        var f = document.createElement("FORM");
+        f.setAttribute("method", "post");
+        f.setAttribute("action", "./rename");
+        var inp = document.createElement("INPUT");
+        inp.setAttribute("type", "text");
+        inp.setAttribute("required", "true");
+        inp.setAttribute("name", "newname");
+        inp.setAttribute("placeholder", "Enter New Name");
+        inp.setAttribute("id", "rename");
+        var label = document.createElement("LABEL");
+        label.setAttribute("for", "rename");
+        label.innerText = "New Name: ";
+        var btn = document.createElement("BUTTON");
+        btn.setAttribute("type", "f");
+        btn.innerText = "Rename";
+        f.append(label);
+        f.append(inp);
+        f.append(btn);
+        e.parentNode.append(f);
+    }
+
+    function delete_confirm() {
+        if (confirm('Are you sure you want to delete this group?')) {
+            window.location.href = './delete';
+        }
+    }
+
     function autocomplete(inp, arr_names, arr_val) {
         var currentFocus;
         inp.addEventListener("input", function(e) {
