--- a/src/main/resources/templates/school_admin_home.html
+++ b/src/main/resources/templates/school_admin_home.html
@@ -5,6 +5,9 @@
     <title>Admin Home</title>
 </head>
 <body>
+<div id="header">
+    <a class="btn" href="/logout" style="float: right">Log out</a>
+</div>
 <p><a href="semesters/list">Manage Semesters</a></p>
 <p><a href="courses/list">Manage Courses</a></p>
 <p><a href="members/teachers">Manage Teachers</a></p>
