--- a/src/main/resources/templates/semester_calendar.html
+++ b/src/main/resources/templates/semester_calendar.html
@@ -5,6 +5,10 @@
     <title>Semester Calendar</title>
 </head>
 <body>
+<div id="header">
+    <a class="btn" href="../../admin_home">Home</a>
+    <a class="btn" href="/logout" style="float: right">Log out</a>
+</div>
 <a href="./rotation_config">Rename Rotation Days</a>
 <a href="./edit_timeslots">Edit Timeslots</a>
 <div>
