--- a/src/main/resources/templates/semester_create.html
+++ b/src/main/resources/templates/semester_create.html
@@ -5,6 +5,10 @@
     <title>Set up a new semester</title>
 </head>
 <body>
+<div id="header">
+    <a class="btn" href="../admin_home">Home</a>
+    <a class="btn" href="/logout" style="float: right">Log out</a>
+</div>
 <form method="post">
     <p>
         <label for="name"><b>Semester name</b></label>
