--- a/src/main/resources/templates/teacher_registration.html
+++ b/src/main/resources/templates/teacher_registration.html
@@ -5,6 +5,10 @@
     <title>Invite a teacher</title>
 </head>
 <body>
+<div id="header">
+    <a class="btn" href="../admin_home">Home</a>
+    <a class="btn" href="/logout" style="float: right">Log out</a>
+</div>
 <form method="post">
     <label for="name1"><b>First Name</b></label>
     <input type="text" placeholder="Enter First name" name="name1" id="name1" required/>
