--- a/src/main/resources/templates/timeslots_edit.html
+++ b/src/main/resources/templates/timeslots_edit.html
@@ -5,6 +5,10 @@
     <title>Timeslots</title>
 </head>
 <body>
+<div id="header">
+    <a class="btn" href="../../admin_home">Home</a>
+    <a class="btn" href="/logout" style="float: right">Log out</a>
+</div>
 <form method="post">
     <div th:each="timeslot: ${timeslots}">
         <label th:text="${timeslot.name}"></label>
