--- a/src/main/resources/templates/group_view.html
+++ b/src/main/resources/templates/group_view.html
@@ -5,6 +5,10 @@
     <title>Group View</title>
 </head>
 <body>
+<div id="header">
+    <a class="btn" href="../../admin_home">Home</a>
+    <a class="btn" href="/logout" style="float: right">Log out</a>
+</div>
 <h2 th:text="${group.name}"></h2>
 <div>
     <button onclick="rename(this)">Rename Group</button>
