--- a/src/main/resources/templates/manage_groups.html
+++ b/src/main/resources/templates/manage_groups.html
@@ -5,6 +5,10 @@
     <title>Manage Student Groups</title>
 </head>
 <body>
+<div id="header">
+    <a class="btn" href="../admin_home">Home</a>
+    <a class="btn" href="/logout" style="float: right">Log out</a>
+</div>
 <div class = groups_container>
     <input id="groupInput" type="text" name="group_search" placeholder="Search groups">
     <div class = groups th:each="group: ${groups}">
